Archive2/f9/e8f1f81c34a7ac/output
main.cpp:8:11: warning: unused variable 'm' [-Wunused-variable]
        x m;
          ^
main.cpp:11:5: error: unknown type name 'x'
    x c;
    ^
1 warning and 1 error generated.
