Archive2/f9/e8f1f81c34a7ac/main.cpp
#include <iostream>
#include <string>

int main() {
    
    {
        typedef int x;
        x m;
    }
    
    x c;
    
}